# BeerQuest

./: .gitignore  README.md  app.py  config.py  extensions.py  migrations.py  models.py  pyproject.toml  scénario1.json  scénario2.json  setup.md  setup_EN.md  setup_FR.md  tasks.py  utils.py
routes/: admin.py  public.py
static/css/: animations.css  custom.css
static/js/: admin.js
templates/: base.html  index.html
templates/admin/: admin_management.html  archives.html  dashboard.html  login.html  pdf_synthesis.html  settings.html  statistics.html
