[project]
name = "repl-nix-vpsscenariomanager"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "apscheduler>=3.10.4",
    "openai>=1.55.0",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "weasyprint>=63.0",
    "flask-apscheduler>=1.13.1",
    "flask-socketio>=5.4.1",
    "pytz>=2024.2",
    "flask-migrate>=4.0.7",
]
